--- a/Style/game.css
+++ b/Style/game.css
@@ -107,7 +107,7 @@
     background: white;
 }
 
-#qrcode_icon, #cart_icon, #user_icon, #other_icon {
+#home_icon, #cart_icon, #user_icon, #other_icon {
     color: #6c7075;
     font-size: 20px;
     border: 10px solid white;
@@ -116,7 +116,7 @@
 
 }
 
-#home_icon {
+#qrcode_icon {
     color: #f28500;
     font-size: 20px;
     border: 10px solid white;
